if include_motionautoaway
MOTIONAUTOAWAY_SUBDIR=motionautoaway
endif

if include_smpppdcs
SMPPPDCS_SUBDIR=smpppdcs
endif

SUBDIRS = latex autoreplace history contactnotes cryptography\
	connectionstatus translator nowlistening webpresence texteffect\
	highlight alias $(MOTIONAUTOAWAY_SUBDIR) netmeeting addbookmarks\
	statistics $(SMPPPDCS_SUBDIR) 
