



########### install files ###############

install( FILES Kopete_Event.ogg Kopete_Received.ogg Kopete_Sent.ogg Kopete_User_is_Online.ogg  DESTINATION ${SOUND_INSTALL_DIR})




#original Makefile.am contents follow:

#kde_sound_DATA = Kopete_Event.ogg Kopete_Received.ogg Kopete_Sent.ogg Kopete_User_is_Online.ogg
#
#EXTRA_DIST = $(kde_sound_DATA)
#
